--- a/soal.html
+++ b/soal.html
@@ -228,19 +228,45 @@
           const waktuSelesai = Date.now();
           const waktuMulai =
             parseInt(localStorage.getItem("waktuMulai")) || waktuSelesai;
+          const durasi = waktuSelesai - waktuMulai;
 
+          const id = localStorage.getItem("userId") || "anonim";
+          const name = localStorage.getItem("userName") || "Peserta";
+
+          // Kirim data ke API Netlify Function
+          fetch("/.netlify/functions/submit-score", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify({
+              id: id,
+              name: name,
+              score: skor,
+              duration: durasi,
+            }),
+          })
+            .then((res) => res.json())
+            .then((res) => {
+              console.log("Submit skor sukses:", res);
+            })
+            .catch((err) => {
+              console.error("Gagal kirim skor:", err);
+            });
+
+          // Simpan riwayat lokal juga (opsional)
           const riwayat = JSON.parse(localStorage.getItem("riwayatSkor")) || [];
-          const id = localStorage.getItem("userId");
           riwayat.push({ id, skor, waktuMulai, waktuSelesai });
           localStorage.setItem("riwayatSkor", JSON.stringify(riwayat));
 
-          // Kunci akses soal dan HAPUS override jika ada
+          // Reset state lokal
           localStorage.setItem("aksesSoalTerkunci", "true");
           localStorage.removeItem("overrideAksesSoal");
           localStorage.removeItem("skor");
           localStorage.removeItem("soalIndex");
           localStorage.removeItem("jawabanTerkunci");
 
+          // Arahkan ke leaderboard
           window.location.href = "leaderboard.html";
         } else {
           localStorage.setItem("soalIndex", soalIndex);
