--- a/soal.html
+++ b/soal.html
@@ -112,12 +112,17 @@
 
     <script>
       const userId = localStorage.getItem("userId");
+      const sudahSubmit = localStorage.getItem("sudahSubmit") === "true";
+
       fetch(`/.netlify/functions/check-unlock?id=${userId}`)
         .then((res) => res.json())
         .then(({ unlocked }) => {
           const terkunci = localStorage.getItem("aksesSoalTerkunci") === "true";
           const dibukaAdmin = unlocked;
-          if (terkunci && !dibukaAdmin && userId !== "satrio-1234") {
+          if (
+            (terkunci && !dibukaAdmin && userId !== "satrio-1234") ||
+            sudahSubmit
+          ) {
             window.location.href = "leaderboard.html";
           }
         });
@@ -148,21 +153,21 @@
         const kombinasi = [
           {
             deskripsi:
-              "Buat form login dengan dua input: username dan password, dan satu tombol login.",
+              "Buat form login dengan validasi JavaScript untuk memastikan input tidak kosong sebelum dikirim.",
             html: "",
             css: "",
             js: "",
           },
           {
             deskripsi:
-              "Buat tabel HTML dengan 3 baris dan 2 kolom, serta beri border.",
+              "Buat tabel HTML dengan 5 baris dan beri pewarnaan baris genap menggunakan CSS.",
             html: "",
             css: "",
             js: "",
           },
           {
             deskripsi:
-              "Buat elemen <div> dengan teks 'Klik aku' dan ubah background-nya jadi kuning saat diklik menggunakan JavaScript.",
+              "Buat tombol yang ketika diklik, akan menambah elemen list baru ke dalam <ul> menggunakan JavaScript.",
             html: "",
             css: "",
             js: "",
@@ -182,8 +187,14 @@
       let soalIndex = parseInt(localStorage.getItem("soalIndex")) || 0;
       let jawabanTerkunci =
         JSON.parse(localStorage.getItem("jawabanTerkunci")) || [];
-      let waktuMulai =
-        parseInt(localStorage.getItem("waktuMulai")) || Date.now();
+      let waktuMulai;
+
+      if (!localStorage.getItem("waktuMulai")) {
+        waktuMulai = Date.now();
+        localStorage.setItem("waktuMulai", waktuMulai);
+      } else {
+        waktuMulai = parseInt(localStorage.getItem("waktuMulai"));
+      }
 
       function tampilkanSoal() {
         const soal = soalData[soalIndex];
@@ -191,9 +202,9 @@
           soalIndex + 1
         }`;
         document.getElementById("deskripsiSoal").textContent = soal.deskripsi;
-        htmlEditor.setValue("");
-        cssEditor.setValue("");
-        jsEditor.setValue("");
+        htmlEditor.setValue(soal.html);
+        cssEditor.setValue(soal.css);
+        jsEditor.setValue(soal.js);
         document.getElementById("score").textContent = `Score: ${skor}`;
       }
 
@@ -209,7 +220,7 @@
         document.getElementById("score").textContent = `Score: ${skor}`;
       }
 
-      function nextSoal() {
+      async function nextSoal() {
         soalIndex++;
         if (soalIndex >= soalData.length) {
           const waktuSelesai = Date.now();
@@ -221,24 +232,28 @@
           const id = localStorage.getItem("userId") || "anonim";
           const name = localStorage.getItem("userName") || "Peserta";
 
-          fetch("/.netlify/functions/submit-score", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({
-              id,
-              name,
-              score: finalScore,
-              duration: durasi,
-            }),
-          });
-
-          localStorage.setItem("aksesSoalTerkunci", "true");
-          localStorage.removeItem("skor");
-          localStorage.removeItem("soalIndex");
-          localStorage.removeItem("jawabanTerkunci");
-          localStorage.removeItem("waktuMulai");
-
-          window.location.href = "leaderboard.html";
+          try {
+            const res = await fetch("/.netlify/functions/submit-score", {
+              method: "POST",
+              headers: { "Content-Type": "application/json" },
+              body: JSON.stringify({
+                id,
+                name,
+                score: finalScore,
+                duration: durasi,
+              }),
+            });
+            if (!res.ok) throw new Error("Submit gagal");
+            localStorage.setItem("sudahSubmit", "true");
+            localStorage.setItem("aksesSoalTerkunci", "true");
+            localStorage.removeItem("skor");
+            localStorage.removeItem("soalIndex");
+            localStorage.removeItem("jawabanTerkunci");
+            localStorage.removeItem("waktuMulai");
+            window.location.href = "leaderboard.html";
+          } catch (err) {
+            alert("Gagal menyimpan skor: " + err.message);
+          }
         } else {
           localStorage.setItem("soalIndex", soalIndex);
           tampilkanSoal();
@@ -272,7 +287,6 @@
       window.onload = () => {
         tampilkanSoal();
         startTimer();
-        localStorage.setItem("waktuMulai", waktuMulai);
       };
     </script>
   </body>
